--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -193,3 +193,19 @@ height:125px;
 background-repeat:no-repeat;
 background-image:url(%%ccfun%%);
 }
+
+a[href|="/ccsegue"] {
+float:left;
+width:92px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccsegue%%);
+}
+
+a[href|="/ccxrdsnuggle"] {
+float:left;
+width:150px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccxrdsnuggle%%);
+}
