--- a/source-css/futemotes.css
+++ b/source-css/futemotes.css
@@ -357,3 +357,11 @@ a[href|="/twiley"] {
     height: 5000px;
     width: 5000px;
 }
+
+a[href|="/AJinterrobang"],a[href|="/futajhelp"],a[href|="/futashyaj"],a[href|="/futatwishy"],a[href|="/futhelp"],a[href|="/noponyhere"]{display: block;clear: none;float: left;background-image: url(%%futnewnew%%);}
+a[href|="/AJinterrobang"]{width:102px; height:154px; background-position: -1px -1px}
+a[href|="/futajhelp"]{width:227px; height:216px; background-position: -104px -1px}
+a[href|="/futashyaj"]{width:352px; height:245px; background-position: -1px -218px}
+a[href|="/futatwishy"]{width:202px; height:200px; background-position: -1px -464px}
+a[href|="/futhelp"]{width:152px; height:216px; background-position: -204px -464px}
+a[href|="/noponyhere"]{width:252px; height:200px; background-position: -1px -681px}
