--- a/source-css/mlas1party.css
+++ b/source-css/mlas1party.css
@@ -1,7 +1,7 @@
 /* Changes background  /r/mlas1 */
-body, body.res-nightmode:first-of-type {
+body, res-nightmode.body, body.res-nightmode {
    
-     background:  url(%%party%%)  no-repeat fixed 63% 90% !important ;
+     background:  url(%%party%%)  no-repeat fixed 63% 90% !important;
     
 }
 
