--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -683,7 +683,7 @@ margin-right: 320px;
 
 /*Background*/
 body {
-   background: url(%%background%%) no-repeat fixed center center;
+   background: url(%%background%%) no-repeat fixed right bottom;
    margin-top: 5px;
    }
 
