--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -615,7 +615,7 @@ a[href|="/babselona"] {
  background-position: -0px -1200px;
 } 
 
-a[href|="/berrysiadrunkmond"] {  
+a[href|="/berryisadrunkmond"] {  
  display: block;
  clear: none;
  float: left; 
