Stylesheet/emote/tag updates 2013-09-01

--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1179,7 +1179,8 @@ a[href|="/fascinating"],
 a[href|="/honesty"],
 a[href|="/howyoudoin"],
 a[href|="/literallybrohoof"],
-a[href|="/abhowyoudoin"]
+a[href|="/abhowyoudoin"],
+a[href|="/pootishorn"]
 {
     display: block;
     clear: none;
@@ -1282,6 +1283,11 @@ a[href|="/abhowyoudoin"]
 {
 	width: 171px;
 	background-position: -348px -700px;
+}
+a[href|="/pootishorn"]
+{
+	width: 193px;
+	background-position: -0px -840px;
 }
 /* end sheet 8 */
 
