--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -584,6 +584,15 @@ a[href|="/wynauttrombone"] {
  background-image: url(%%wynauttrombone%%);
 } 
 
+a[href|="/spoonderland"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 161px;
+ height: 150px;
+ background-image: url(%%spoonderland%%);
+} 
+
 a[href|="/applejackvilla"] {  
  display: block;
  clear: none;
@@ -665,7 +674,7 @@ a[href|="/celestic"] {
  background-position: -0px -450px;
 } 
 
-a[href|="/cheerlieesea"] {  
+a[href|="/cheerileesea"] {  
  display: block;
  clear: none;
  float: left; 
