--- a/source-css/comeinside.css
+++ b/source-css/comeinside.css
@@ -1,4 +1,48 @@
-/* .side { background-image: url(%%fireplace%%) ; background-repeat: no-repeat;} */
+.side:after { width: 415px; height: 507px; background-image: url(%%fireplace%%); content: " "; position: fixed; bottom:2%; left: 5%; z-index: -1; }
+
+/*Announcement Shit*/
+.titlebox .usertext-body .md h6 {
+    display: block;
+    position: absolute;
+    top: 70px;
+    left: 15px;
+    margin-top: .5em;
+    padding-top: .2em;
+    padding-bottom: .2em;
+    padding-left: .7em;
+    padding-right: .7em;
+    font-size: 1.3em;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-weight: normal;
+    text-shadow: 1px 1px 2px #000;
+    color: #ede329;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #555 #444 #444 #444;
+    border-radius: 3px;
+    background-color: #666
+    }
+/* Allow absolute positioning to page */
+.titlebox form {
+    position: static
+    }
+/* Inactive link */
+.titlebox .usertext-body .md h6 a, .titlebox .usertext-body .md h6 a:link, .titlebox .usertext-body .md h6 a:visited {
+    color: #CCC
+    }
+/* Link on hover */
+.titlebox .usertext-body .md h6 a:hover {
+    color: #DDD
+    }
+/* Catches all <a> */
+.titlebox .usertext-body .md h6 a:before {
+    content: "Look'it me, I'm pretty!:";
+    color: #ede329;
+    border-right: 1px solid #444;
+    padding-right: .6em;
+    margin-right: .6em
+    }
+
 
 /* Banner Image */
  #header #header-bottom-left {
@@ -89,6 +133,32 @@ body.res-nightmode:first-of-type > .content {background-color: transparent!impor
 
 /* ------ Emotes! --------- */
 
+a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|='/mylifeisinshambles'], a[href|='/ohgosh'], a[href|='/ppshiggy'], a[href|='/ppsmirk'], a[href|='/scootafied'], a[href|='/scootafried'], a[href|='/sleepymac'], a[href|='/stitchbystitch'], a[href|='/surstageleft'], a[href|='/tavisalute'], a[href|='/thebaz'], a[href|='/twiface'], a[href|='/twilongdidntread'] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%bsheet%%)
+    }
+
+
+a[href|='/gotobread'] {width:185px; height:120px; background-position: -2px -124px}
+a[href|='/haveacookie'] {width:150px; height:150px; background-position: -2px -555px}
+a[href|='/horseonfire'] {width:190px; height:125px; background-position: -2px -251px}
+a[href|='/mylifeisinshambles'] {width:122px; height:150px; background-position: -154px -555px}
+a[href|='/ohgosh'] {width:188px; height:125px; background-position: -189px -124px}
+a[href|='/ppshiggy'] {width:137px; height:120px; background-position: -223px -2px}
+a[href|='/ppsmirk'] {width:110px; height:120px; background-position: -111px -2px}
+a[href|='/scootafied'], a[href|='/scootafried'] {width:107px; height:110px; background-position: -2px -2px}
+a[href|='/sleepymac'] {width:206px; height:175px; background-position: -278px -555px}
+a[href|='/stitchbystitch'] {width:141px; height:150px; background-position: -291px -403px}
+a[href|='/surstageleft'] {width:134px; height:150px; background-position: -155px -403px}
+a[href|='/tavisalute'] {width:155px; height:150px; background-position: -194px -251px}
+a[href|='/thebaz'] {width:114px; height:150px; background-position: -351px -251px}
+a[href|='/twiface'] {width:151px; height:150px; background-position: -2px -403px}
+a[href|='/twilongdidntread'] {width:176px; height:200px; background-position: -2px -732px}
+
+
+
 a[href|="/iamafillyandwhatisthis"]
 {display:block;clear:none;float:left;width:65px;height:100px;background-image:url(%%iamafilly%%)!important}
 
@@ -108,6 +178,9 @@ a[href|='/partydance'] { width:130px; height:150px; background-image: url(%%part
 
 
 a[href|='/tavilol'] { width:197px; height:150px; background-image: url(%%tavilol%%);  display: block; clear: none; float: left;}
+
+
+a[href|='/boop'] { width:241px; height:200px; background-image: url(%%boop%%);  display: block; clear: none; float: left;}
 
 
 a[href|='/sprite'], a[href|='/adorkable'], a[href|='/ajhowdy'], a[href|='/appleshrug'], a[href|='/disneat'], a[href|='/minakowhy'], a[href|='/ppeh'], a[href|='/ppjoy'], a[href|='/spikewhatever'], a[href|='/tavimix'], a[href|='/taviwooo'], a[href|='/trixicone'], a[href|='/twitank'], a[href|='/usawut'], a[href|='/woonawolf'], a[href|='/horrify']{
@@ -158,7 +231,7 @@ div.titlebox span.number:after {
     }
 div.titlebox .users-online span.number:after
 {
-    content:" Hova-priced bagels";
+    content:" Fancy Pants Dancers";
 }
 
 /* Hides downvote arrow -circle jerks ahoy!*/
@@ -327,6 +400,7 @@ background-repeat: no-repeat;
 .flair-molestia:before { background-position: 0px -1400px}
 .flair-fluffy:before { background-position: 0px -1440px}
 .flair-Generic:before { background-position: 0px -1480px}
+.flair-dda1add:before { background-position: 0px -1520px}
 /* For anyone with no flair, or flair disabled, this will give them missingno flair.
     Listed before the rest of the username shit so it will be overridden by manual flair additions. */
 :not(.flair) + a.author:before  {
